--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.35 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.34 (2015-03-30)
 +++++++++++++++++++
 
