Back to development: 2.0.36

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.36 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.35 (2015-04-15)
 +++++++++++++++++++
 
