--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Tue Apr 21 13:26:30 2015\n"
-"PO-Revision-Date: 2015-04-21 14:00+0100\n"
+"PO-Revision-Date: 2015-04-22 15:10+0100\n"
 "Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -3884,7 +3884,7 @@ msgstr "zusätzlicher Ressortaccount:"
 
 #: zeit/push/browser/form.py:23
 msgid "Mobile title"
-msgstr "Alternative kurze Headline für App und Watch"
+msgstr "Alternative kurze Überschrift für App und Watch"
 
 #: zeit/push/browser/form.py:24
 msgid "Enable mobile push"
