--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,15 +15,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Fri Apr 24 13:29:09 2015\n"
-"PO-Revision-Date: 2015-04-24 13:34+0100\n"
-"Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
+"PO-Revision-Date: 2015-04-28 11:01+0100\n"
+"Last-Translator: Florian Pilz <fp@gocept.com>\n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: zope/app/locales/extract.py\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.7.5\n"
 
 #: zeit/addcentral/sidebar.py:33 zeit/addcentral/sidebar.pt:10
 #: zeit/cms/browser/form.py:259 zeit/cms/application.zcml:44
@@ -2598,7 +2598,7 @@ msgstr "Automatisches Befüllen umschalten"
 
 #: zeit/content/cp/browser/layout.block.edit-automatic.pt:1
 msgid "Edit block automatic"
-msgstr "Automatisches Befüllen"
+msgstr "Autopilot"
 
 #: zeit/content/cp/browser/layout.block.edit-commons.pt:1
 msgid "Edit block common"
@@ -2755,7 +2755,7 @@ msgstr "Layout 1. Teaser"
 
 #: zeit/content/cp/interfaces.py:325
 msgid "automatic"
-msgstr "automatisch"
+msgstr "Autopilot"
 
 #: zeit/content/cp/interfaces.py:329
 msgid "automatic-area-type"
