--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.38 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.37 (2015-04-28)
 +++++++++++++++++++
 
