Back to development: 2.0.39

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.39 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.38 (2015-04-29)
 +++++++++++++++++++
 
