--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.40 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.39 (2015-05-19)
 +++++++++++++++++++
 
