--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.41 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.40 (2015-06-09)
 +++++++++++++++++++
 
