--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.44 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.43 (2015-06-23)
 +++++++++++++++++++
 
