--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.46 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.45 (2015-07-23)
 +++++++++++++++++++
 
