--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -14,8 +14,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
-"POT-Creation-Date: Fri Aug 21 11:16:18 2015\n"
-"PO-Revision-Date: 2015-08-21 11:17+0100\n"
+"POT-Creation-Date: Fri Aug 21 13:43:20 2015\n"
+"PO-Revision-Date: 2015-08-21 13:44+0100\n"
 "Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -237,7 +237,7 @@ msgstr "Termin bearbeiten"
 #: zeit/content/article/edit/browser/reference.py:41
 #: zeit/content/article/edit/browser/social.py:24
 #: zeit/content/cp/browser/view.py:8
-#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:67
+#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:58
 #: zeit/content/gallery/browser/form.py:62
 #: zeit/content/image/browser/form.py:64 zeit/content/link/browser/form.py:45
 #: zeit/content/quiz/browser/answer.py:42
@@ -778,7 +778,7 @@ msgstr "Kopf"
 
 #: zeit/cms/content/browser/form.py:36
 #: zeit/content/advertisement/browser/form.py:18
-#: zeit/content/cp/browser/form.py:29 zeit/content/gallery/browser/form.py:25
+#: zeit/content/cp/browser/form.py:30 zeit/content/gallery/browser/form.py:25
 #: zeit/content/image/browser/form.py:20
 #: zeit/content/infobox/browser/form.py:24
 #: zeit/content/infobox/browser/form.py:79
@@ -804,7 +804,7 @@ msgstr "Automatisch platzieren"
 
 #: zeit/cms/content/browser/form.py:62 zeit/content/article/browser/form.py:34
 #: zeit/content/article/edit/browser/recension.py:64
-#: zeit/content/cp/browser/form.py:48 zeit/content/gallery/browser/form.py:35
+#: zeit/content/cp/browser/form.py:49 zeit/content/gallery/browser/form.py:35
 msgid "misc."
 msgstr "Sonstiges"
 
@@ -1348,7 +1348,7 @@ msgstr "Zeigen"
 #: zeit/cms/content/browser/template.zcml:58
 #: zeit/cms/repository/browser/delete.pt:28
 #: zeit/content/article/edit/browser/workflow.pt:52
-#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:31
+#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:22
 #: zeit/content/quiz/browser/quiz.py:90
 msgid "Delete"
 msgstr "Löschen"
@@ -2641,18 +2641,14 @@ msgstr ""
 "Nur Video-Playlisten können auf dem Video-Riegel fallen gelassen werden."
 
 #: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:14
-msgid "Edit in place"
-msgstr "Im CPE bearbeiten"
-
-#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:23
 msgid "Open in new window"
 msgstr "In neuem Fenster öffnen"
 
-#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:46
+#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:37
 msgid "To add content drop it here."
 msgstr "Ziehen Sie Inhalte hierher um einen Teaser hinzuzufügen."
 
-#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:60
+#: zeit/content/cp/browser/blocks/teaser.edit-contents.pt:51
 msgid "Insert link"
 msgstr "Link einfügen"
 
@@ -2685,25 +2681,21 @@ msgstr "Metadaten bearbeiten"
 msgid "CenterPage"
 msgstr "Center-Page"
 
-#: zeit/content/cp/browser/form.py:39
+#: zeit/content/cp/browser/form.py:40
 msgid "OG Metadata"
 msgstr "Metadaten"
 
-#: zeit/content/cp/browser/form.py:58
+#: zeit/content/cp/browser/form.py:59
 msgid "Add centerpage"
 msgstr "Centerpage hinzufügen"
 
-#: zeit/content/cp/browser/form.py:68
+#: zeit/content/cp/browser/form.py:69
 msgid "Edit centerpage"
 msgstr "Centerpage bearbeiten"
 
-#: zeit/content/cp/browser/form.py:74
+#: zeit/content/cp/browser/form.py:75
 msgid "View centerpage metadata"
 msgstr "Metadaten"
-
-#: zeit/content/cp/browser/form.py:79 zeit/content/cp/interfaces.py:138
-msgid "Add storystream"
-msgstr "Storystream"
 
 #: zeit/content/cp/browser/layout.area.delete.pt:1
 #: zeit/edit/browser/layout.block.delete.pt:1
@@ -2743,25 +2735,17 @@ msgstr "Achtung"
 msgid "Checking out"
 msgstr "Auschecken"
 
-#: zeit/content/cp/browser/teaser.edit.pt:4
-msgid "Edit Teaser"
-msgstr "Teaser bearbeiten"
+#: zeit/content/cp/browser/storystream.py:9 zeit/content/cp/interfaces.py:138
+msgid "Add storystream"
+msgstr "Storystream"
 
-#: zeit/content/cp/browser/teaser.py:105
+#: zeit/content/cp/browser/teaser.py:59
 msgid "Edit teaser"
 msgstr "Teaser bearbeiten"
 
-#: zeit/content/cp/browser/teaser.py:111
+#: zeit/content/cp/browser/teaser.py:65
 msgid "View teaser"
 msgstr "Teaser anzeigen"
-
-#: zeit/content/cp/browser/teaser.py:57
-msgid "Apply for article"
-msgstr "Im Artikel speichern"
-
-#: zeit/content/cp/browser/teaser.py:67
-msgid "Apply only for this page"
-msgstr "Als freien Teaser speichern"
 
 #: zeit/content/cp/browser/workflow.py:37
 #: zeit/newsletter/browser/workflow.py:25 zeit/workflow/browser/form.py:117
@@ -2966,24 +2950,24 @@ msgid "Light (black text)"
 msgstr "Hell (schwarzer Text)"
 
 #: zeit/content/cp/interfaces.py:519
-msgid "1 (very weak)"
-msgstr "1 (sehr schwach)"
+msgid "opacity-1"
+msgstr "1 (kaum transparent)"
 
 #: zeit/content/cp/interfaces.py:520
-msgid "2"
+msgid "opacity-2"
 msgstr "2"
 
 #: zeit/content/cp/interfaces.py:521
-msgid "3"
-msgstr "3"
+msgid "opacity-3"
+msgstr "3 (mittel)"
 
 #: zeit/content/cp/interfaces.py:522
-msgid "4"
+msgid "opacity-4"
 msgstr "4"
 
 #: zeit/content/cp/interfaces.py:523
-msgid "5 (very strong)"
-msgstr "5 (sehr stark)"
+msgid "opacity-5"
+msgstr "5 (sehr transparent)"
 
 #: zeit/content/cp/interfaces.py:534
 msgid "Force image on mobile"
@@ -4512,3 +4496,12 @@ msgstr "Ziehen Sie Inhalte hierher um einen neuen Block zu erzeugen."
 
 msgid "Variants"
 msgstr "Bearbeiten (beta)"
+
+msgid "Edit in place"
+msgstr "Im CPE bearbeiten"
+
+msgid "Apply for article"
+msgstr "Im Artikel speichern"
+
+msgid "Apply only for this page"
+msgstr "Als freien Teaser speichern"
