--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.50 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.49 (2015-08-24)
 +++++++++++++++++++
 
