Back to development: 2.0.51

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.51 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.50 (2015-08-27)
 +++++++++++++++++++
 
