--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.52 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.51 (2015-09-02)
 +++++++++++++++++++
 
