--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.54 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.53 (2015-09-11)
 +++++++++++++++++++
 
