Back to development: 2.0.55

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.55 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.54 (2015-10-29)
 +++++++++++++++++++
 
