--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.56 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.55 (2015-11-12)
 +++++++++++++++++++
 
