Back to development: 2.0.57

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.57 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.56 (2015-12-02)
 +++++++++++++++++++
 
