--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.58 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.57 (2015-12-07)
 +++++++++++++++++++
 
