Back to development: 2.0.59

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.59 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.58 (2015-12-17)
 +++++++++++++++++++
 
