--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Thu Dec 17 09:10:47 2015\n"
-"PO-Revision-Date: 2015-12-17 09:11+0100\n"
+"PO-Revision-Date: 2016-01-21 16:47+0100\n"
 "Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -4215,11 +4215,11 @@ msgstr "Erzeugen"
 
 #: zeit/push/browser/form.py:16
 msgid "Enable Facebook"
-msgstr "Facebook ZON Hauptaccount"
+msgstr "Facebook ZEIT ONLINE"
 
 #: zeit/push/browser/form.py:18
 msgid "Facebook Main Text"
-msgstr "Facebook-Posting ZON Hauptaccount"
+msgstr "Facebook-Posting ZEIT ONLINE"
 
 #: zeit/push/browser/form.py:20
 msgid "Enable Facebook Magazin"
@@ -4231,7 +4231,7 @@ msgstr "Facebook-Posting ZEITmagazin"
 
 #: zeit/push/browser/form.py:23
 msgid "Enable Twitter"
-msgstr "Twitter ZON Hauptaccount"
+msgstr "@zeitonline"
 
 #: zeit/push/browser/form.py:25
 msgid "Enable Twitter Ressort"
