--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.60 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.59 (2016-01-22)
 +++++++++++++++++++
 
