--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.61 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.60 (2016-02-25)
 +++++++++++++++++++
 
