--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.63 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.62 (2016-03-11)
 +++++++++++++++++++
 
