--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.66 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.65 (2016-04-08)
 +++++++++++++++++++
 
