Back to development: 2.0.67

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.67 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.66 (2016-04-15)
 +++++++++++++++++++
 
