--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.68 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.67 (2016-06-06)
 +++++++++++++++++++
 
