--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Wed Jun  1 14:48:01 2016\n"
-"PO-Revision-Date: 2016-06-06 16:36+0100\n"
+"PO-Revision-Date: 2016-06-09 12:54+0100\n"
 "Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -1889,7 +1889,7 @@ msgstr "Folgende Fehler müssen vor dem Einchecken korrigiert werden:"
 
 #: zeit/content/article/edit/browser/edit.header.landing.pt:1
 msgid "Drop header module here"
-msgstr "Ziehen Sie ein Header-Modul hierher (optional)"
+msgstr "Ziehen Sie Header-Module hierher, um sie zu verknüpfen"
 
 #: zeit/content/article/edit/browser/edit.lastpublished.pt:10
 msgid "not published"
