Back to development: 2.0.69

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.69 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.68 (2016-06-09)
 +++++++++++++++++++
 
