--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.70 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.69 (2016-06-27)
 +++++++++++++++++++
 
