Back to development: 2.0.71

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.71 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.70 (2016-07-21)
 +++++++++++++++++++
 
