--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.72 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.71 (2016-07-26)
 +++++++++++++++++++
 
