Back to development: 2.0.74

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.74 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.73 (2016-08-22)
 +++++++++++++++++++
 
