--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.77 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.76 (2016-09-14)
 +++++++++++++++++++
 
