--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.78 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.77 (2016-11-23)
 +++++++++++++++++++
 
