--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.81 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.80 (2016-12-29)
 +++++++++++++++++++
 
