--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.83 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.82 (2017-01-18)
 +++++++++++++++++++
 
