--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.85 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.84 (2017-02-08)
 +++++++++++++++++++
 
