Back to development: 2.0.86

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.86 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.85 (2017-02-16)
 +++++++++++++++++++
 
