--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: 2017-02-16 14:08+0100\n"
-"PO-Revision-Date: 2017-02-16 14:08+0100\n"
+"PO-Revision-Date: 2017-02-23 13:34+0100\n"
 "Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: zope/app/locales/extract.py\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 1.8.12\n"
 
 #: zeit/addcentral/sidebar.py:33 zeit/addcentral/sidebar.pt:10
 #: zeit/cms/browser/form.py:259 zeit/cms/application.zcml:48
@@ -4618,11 +4618,11 @@ msgstr ""
 
 #: zeit/push/mobile.py:63
 msgid "push-news-title"
-msgstr "ZEIT ONLINE"
+msgstr "Lesetipp"
 
 #: zeit/push/mobile.py:65
 msgid "push-breaking-title"
-msgstr "ZEIT ONLINE Eilmeldung"
+msgstr "Eilmeldung"
 
 #. Default: ""
 #: zeit/push/workflow.py:81
