--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.87 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.86 (2017-02-23)
 +++++++++++++++++++
 
