--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.89 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.88 (2017-03-08)
 +++++++++++++++++++
 
