--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ zeit.locales CHANGES
 +++++++++++++++++++
 
 - news-push-title aktualisiert. Von Lesetipp zu Info.
+- ZON-3851: Übersetzungen aktualisiert
 
 
 2.0.88 (2017-03-08)
