--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.90 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.89 (2017-04-07)
 +++++++++++++++++++
 
