--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.91 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.90 (2017-04-12)
 +++++++++++++++++++
 
