--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.locales CHANGES
 2.0.91 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- ZON-3942: Übersetzungen aktualisiert
 
 
 2.0.90 (2017-04-12)
