--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.locales CHANGES
 2.0.92 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- ZON-3948: Übersetzungen aktualisiert
 
 
 2.0.91 (2017-05-22)
