Back to development: 2.0.93

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.93 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.92 (2017-06-09)
 +++++++++++++++++++
 
