--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.locales CHANGES
 2.0.93 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- BUG-621: Übersetzungen aktualisiert
 
 
 2.0.92 (2017-06-09)
